Vertical alignment fix

--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,7 @@ body {
 }
 
 #root {
+  display: flex;
   height: 100%;
   width: 100%;
 }
